Fix def3 submenu structure script

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -24,7 +24,6 @@ html
         content: ""
         clear: both
         display: table
-
 body
     font-size: 1.3rem
     background: $gray10
@@ -116,13 +115,13 @@ header
                 &--sec
                     margin-left: 2rem
                     &:hover
-                        color: lime
+                        color: cyan
                         cursor: pointer
 
                 &--third
                     margin-left: 4rem
                     &:hover
-                        color: $hover
+                        color: lime
                         cursor: pointer
 
     &_item:last-child
