--- a/views/sass.html
+++ b/views/sass.html
@@ -70,7 +70,7 @@
         </li>
         <li>Main Sass features.
             <ul>
-                <li><def2>Variables</def2> For reusable values such as colors, font-sizes, spacing, etc. Are declared with: <strong>$color-red-1: #d0d0d0</strong>
+                <li><def2>Variables</def2> For reusable values such as colors, font-sizes, spacing, etc. Are declared with: <strong>$color-red-1: #d0d0d0</strong>                 
                 <li><def2>Nesting</def2> To nest selector inside of one another using BEM: 
     <pre>
 
@@ -501,7 +501,7 @@
         <li>Musts for a good responsive design.
             <ul>
                 <li><def2>Fluid layouts</def2>:
-                    A fluid layout expands items to fill available free space or shrinks them to prevent overflow.</li>
+                    A fluid layout expands items to fill available free space or shrinks them to prevent overflow.
                     the content adapts to the viewport and maintans its main usability/pourpose, we can
                     achive this mainly in 4 different aproaches: 
                     <ol>
@@ -823,6 +823,7 @@
                         </li>
                     </ol>
                 </li>
+              </li>
                 <br>
                 <li><def2>Responsiveness across browsers</def2> there are browser prefixes for specific styles, for the styles, in order to work on different browsers with different versions (caniuse.com)</li>            
                 <li><def2>Use of rem units and % instead of px</def2>. We can achive this with:            
