--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ header {
   margin-left: 4rem;
 }
 .nav_item_flex-container-item--third:hover {
-  color: lime;
+  color: pink;
   cursor: pointer;
 }
 .nav_item:last-child {
@@ -156,21 +156,31 @@ header {
 def1,
 def2,
 def3 {
+  display: block;
+  line-height: 0.9rem;
   padding: 0 0.5rem;
   font-weight: bold;
-  border-radius: 3px;
+  border-radius: 1px;
+  margin: 0.5rem;
+  width: 30%;
+  max-width: 50%;
 }
 
 def1 {
+  margin-top: 3rem;
+  width: 100%;
+  max-width: 100%;
   background: repeating-linear-gradient(90deg, transparent -120%, yellow 0%, transparent 120%);
 }
 
 def2 {
+  margin-top: 2rem;
   background: repeating-linear-gradient(90deg, transparent -120%, cyan 0%, transparent 120%);
 }
 
 def3 {
-  background: repeating-linear-gradient(90deg, transparent -120%, lime 0%, transparent 120%);
+  margin-top: 1rem;
+  background: repeating-linear-gradient(90deg, transparent -120%, pink 0%, transparent 120%);
 }
 
 def-code {
@@ -183,7 +193,7 @@ def-code {
 }
 
 ul {
-  list-style-type: circle;
+  list-style-type: none;
 }
 ul li ul {
   margin-left: 2rem;
@@ -255,10 +265,10 @@ table tr:nth-child(2n+1) td {
 
 .poblem-solution__container {
   background: #303030;
-  border: 1px solid black;
+  border: 1px solid #909090;
   padding: 1rem;
   border-radius: 15px;
-  margin: 1rem auto 3rem auto;
+  margin: 2rem auto 2rem auto;
   color: white;
 }
 
@@ -273,6 +283,6 @@ table tr:nth-child(2n+1) td {
 
 .poblem-solution__pre {
   font-family: Courier, "Lucida Console", monospace;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   color: white;
 }
