[Add] algorithms scrtion and data

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -91,6 +91,11 @@ header
             & .nav_item_flex-container
                 display: flex
                 margin-top: 1rem
+                max-height: 500px
+                overflow: auto
+                border-bottom: 3px solid black
+                border-left: 3px solid black
+                border-right: 3px solid black
 
         &_flex-container
             color: white
