--- a/views/problems.html
+++ b/views/problems.html
@@ -1,7 +1,7 @@
 <div class="block">
-    <def1>1. Two sum</def1>
+    <def1>1. Two sumaaa</def1>
     <div>
-        <p>Given an array of integers <code>nums</code>&nbsp;and an integer <code>target</code>, return <em>indices of the two numbers such that they add up to <code>target</code></em>.</p>
+        <p>Given an array of integers <strong>nums</strong>&nbsp;and an integer <strong>target</strong>, return <em>indices of the two numbers such that they add up to <strong>target</strong></em>.</p>
         <p>You may assume that each input would have <strong><em>exactly</em> one solution</strong>, and you may not use the <em>same</em> element twice.</p>
         <p>You can return the answer in any order.</p>
         
@@ -29,14 +29,14 @@
         <p><strong>Constraints:</strong></p>
         
         <ul>
-            <li><code>2 &lt;= nums.length &lt;= 10<sup>4</sup></code></li>
-            <li><code>-10<sup>9</sup> &lt;= nums[i] &lt;= 10<sup>9</sup></code></li>
-            <li><code>-10<sup>9</sup> &lt;= target &lt;= 10<sup>9</sup></code></li>
+            <li><strong>2 &lt;= nums.length &lt;= 10<sup>4</sup></strong></li>
+            <li><strong>-10<sup>9</sup> &lt;= nums[i] &lt;= 10<sup>9</sup></strong></li>
+            <li><strong>-10<sup>9</sup> &lt;= target &lt;= 10<sup>9</sup></strong></li>
             <li><strong>Only one valid answer exists.</strong></li>
         </ul>
         
         <p>&nbsp;</p>
-        <strong>Follow-up:&nbsp;</strong>Can you come up with an algorithm that is less than&nbsp;<code>O(n<sup>2</sup>)&nbsp;</code>time complexity?
+        <strong>Follow-up:&nbsp;</strong>Can you come up with an algorithm that is less than&nbsp;<strong>O(n<sup>2</sup>)&nbsp;</strong>time complexity?
     </div>
     
     <div class="poblem-solution__container">
@@ -123,8 +123,8 @@
         <p><strong>Constraints:</strong></p>
         
         <ul>
-            <li>The number of nodes in each linked list is in the range <code>[1, 100]</code>.</li>
-            <li><code>0 &lt;= Node.val &lt;= 9</code></li>
+            <li>The number of nodes in each linked list is in the range <strong>[1, 100]</strong>.</li>
+            <li><strong>0 &lt;= Node.val &lt;= 9</strong></li>
             <li>It is guaranteed that the list represents a number that does not have leading zeros.</li>
         </ul>
     </div>
@@ -206,7 +206,7 @@
 <div class="block">
     <def1>3. Longest Substring Without Repeating Charact</def1>
     <div>    
-        <p>Given a string <code>s</code>, find the length of the <strong>longest substring</strong> without repeating characters.</p>
+        <p>Given a string <strong>s</strong>, find the length of the <strong>longest substring</strong> without repeating characters.</p>
 
         <p>&nbsp;</p>
         <p><strong>Example 1:</strong></p>
@@ -235,8 +235,8 @@
         <p><strong>Constraints:</strong></p>
         
         <ul>
-            <li><code>0 &lt;= s.length &lt;= 5 * 10<sup>4</sup></code></li>
-            <li><code>s</code> consists of English letters, digits, symbols and spaces.</li>
+            <li><strong>0 &lt;= s.length &lt;= 5 * 10<sup>4</sup></strong></li>
+            <li><strong>s</strong> consists of English letters, digits, symbols and spaces.</li>
         </ul>
     </div>
     <div class="poblem-solution__container">
@@ -261,13 +261,12 @@
     </div>
 </div>
 
-
 <div class="block">
-    <def1>4. Median of Two Sorted Arrays </def1>
+    <def1>4. Median of Two Sorted Arrays</def1>
     <div>
-        <p>Given two sorted arrays <code>nums1</code> and <code>nums2</code> of size <code>m</code> and <code>n</code> respectively, return <strong>the median</strong> of the two sorted arrays.</p>
+        <p>Given two sorted arrays <strong>nums1</strong> and <strong>nums2</strong> of size <strong>m</strong> and <strong>n</strong> respectively, return <strong>the median</strong> of the two sorted arrays.</p>
 
-        <p>The overall run time complexity should be <code>O(log (m+n))</code>.</p>
+        <p>The overall run time complexity should be <strong>O(log (m+n))</strong>.</p>
         
         <p>&nbsp;</p>
         <p><strong>Example 1:</strong></p>
@@ -288,13 +287,69 @@
         <p><strong>Constraints:</strong></p>
         
         <ul>
-            <li><code>nums1.length == m</code></li>
-            <li><code>nums2.length == n</code></li>
-            <li><code>0 &lt;= m &lt;= 1000</code></li>
-            <li><code>0 &lt;= n &lt;= 1000</code></li>
-            <li><code>1 &lt;= m + n &lt;= 2000</code></li>
-            <li><code>-10<sup>6</sup> &lt;= nums1[i], nums2[i] &lt;= 10<sup>6</sup></code></li>
+            <li><strong>nums1.length == m</strong></li>
+            <li><strong>nums2.length == n</strong></li>
+            <li><strong>0 &lt;= m &lt;= 1000</strong></li>
+            <li><strong>0 &lt;= n &lt;= 1000</strong></li>
+            <li><strong>1 &lt;= m + n &lt;= 2000</strong></li>
+            <li><strong>-10<sup>6</sup> &lt;= nums1[i], nums2[i] &lt;= 10<sup>6</sup></strong></li>
         </ul>
+    </div>
+    <div class="poblem-solution__container">
+
+        <div class="poblem-solution__title">Solution 1:</div>
+        <pre class="poblem-solution__pre">        
+            /**
+            * @param {number[]} nums1
+            * @param {number[]} nums2
+            * @return {number}
+            */
+            var findMedianSortedArrays = function(nums1, nums2) {
+                let arr = [...nums1, ...nums2]
+                arr.sort(function(a, b) {
+                    if( a === Infinity ) return 1
+                    else if( isNaN(a)) return -1
+                    else return a - b;
+                }) 
+            
+                console.log(arr)
+                let len = arr.length
+                if(len == 1) return arr[0]    
+                return len % 2 != 0 ? arr[Math.floor(len/2)] : (arr[Math.floor(len/2)-1]+arr[Math.floor(len/2)])/2    
+            }            
+        </pre>
+    </div>
+</div>
+
+
+<div class="block">
+    <def1>5. Longest Palindromic Substring </def1>
+    <div>
+        <p>Given a string <strong>s</strong>, return <em>the longest palindromic substring</em> in <strong>s</strong>.</p>
+
+        <p>A string is called a palindrome string if the reverse of that string is the same as the original string.</p>
+        
+        <p>&nbsp;</p>
+        <p><strong>Example 1:</strong></p>
+        
+        <pre><strong>Input:</strong> s = "babad"
+        <strong>Output:</strong> "bab"
+        <strong>Explanation:</strong> "aba" is also a valid answer.
+        </pre>
+        
+        <p><strong>Example 2:</strong></p>
+        
+        <pre><strong>Input:</strong> s = "cbbd"
+        <strong>Output:</strong> "bb"
+        </pre>
+        
+        <p>&nbsp;</p>
+        <p><strong>Constraints:</strong></p>
+        
+        <ul>
+            <li><strong>1 &lt;= s.length &lt;= 1000</strong></li>
+            <li><strong>s</strong> consist of only digits and English letters.</li>
+            </ul>
     </div>
     <div class="poblem-solution__container">
 
