--- a/views/problems.html
+++ b/views/problems.html
@@ -356,23 +356,127 @@
         <div class="poblem-solution__title">Solution 1:</div>
         <pre class="poblem-solution__pre">        
             /**
-            * @param {number[]} nums1
-            * @param {number[]} nums2
-            * @return {number}
+            * @param {string} s
+            * @return {string}
             */
-            var findMedianSortedArrays = function(nums1, nums2) {
-                let arr = [...nums1, ...nums2]
-                arr.sort(function(a, b) {
-                    if( a === Infinity ) return 1
-                    else if( isNaN(a)) return -1
-                    else return a - b;
-                }) 
+           var longestPalindrome = function(s) {    
+               let longest = ""
+           
+               for(let i=0; i&lt s.length; i++){
+                   if(longest.length &lt s.substring(i).length){
+                       let substr = s.substring(i)            
+                       let tempStr = ""
+                       for(let j=0; j&lt substr.length; j++){
+                           tempStr = substr.substring(0, substr.length-j) 
+                           if(tempStr.length > longest.length && isPalindrome(tempStr)) {
+                               longest = tempStr
+                               break
+                           }
+                       }
+                   } 
+                   else break
+               }
+           
+               function isPalindrome(str){
+                   for(let i=0; i&lt Math.floor(str.length-1/2); i++){
+                       if(str[i] != str[str.length-1-i]) return false
+                   }
+                   return true
+               }
+           
+               return longest
+           };
+                  
+        </pre>
+    </div>
+</div>
+
+<div class="block">
+    <def1>6. Zigzag Conversion</def1>
+    <div>
+        <p>The string <code>"PAYPALISHIRING"</code> is written in a zigzag pattern on a given number of rows like this: (you may want to display this pattern in a fixed font for better legibility)</p>
+
+            <pre>
+            P   A   H   N
+            A P L S I I G
+            Y   I   R
+            </pre>
             
-                console.log(arr)
-                let len = arr.length
-                if(len == 1) return arr[0]    
-                return len % 2 != 0 ? arr[Math.floor(len/2)] : (arr[Math.floor(len/2)-1]+arr[Math.floor(len/2)])/2    
-            }            
+            <p>And then read line by line: <code>"PAHNAPLSIIGYIR"</code></p>
+            
+            <p>Write the code that will take a string and make this conversion given a number of rows:</p>
+            
+            <pre>string convert(string s, int numRows);
+            </pre>
+            
+            <p>&nbsp;</p>
+            <p><strong>Example 1:</strong></p>
+            
+            <pre><strong>Input:</strong> s = "PAYPALISHIRING", numRows = 3
+            <strong>Output:</strong> "PAHNAPLSIIGYIR"
+            </pre>
+            
+            <p><strong>Example 2:</strong></p>
+            
+            <pre><strong>Input:</strong> s = "PAYPALISHIRING", numRows = 4
+            <strong>Output:</strong> "PINALSIGYAHRPI"
+            <strong>Explanation:</strong>
+            P     I    N
+            A   L S  I G
+            Y A   H R
+            P     I
+            </pre>
+            
+            <p><strong>Example 3:</strong></p>
+            
+            <pre><strong>Input:</strong> s = "A", numRows = 1
+            <strong>Output:</strong> "A"
+            </pre>
+            
+            <p>&nbsp;</p>
+            <p><strong>Constraints:</strong></p>
+            
+            <ul>
+                <li><code>1 &lt;= s.length &lt;= 1000</code></li>
+                <li><code>s</code> consists of English letters (lower-case and upper-case), <code>','</code> and <code>'.'</code>.</li>
+                <li><code>1 &lt;= numRows &lt;= 1000</code></li>
+            </ul>
+    </div>
+    <div class="poblem-solution__container">
+
+        <div class="poblem-solution__title">Solution 1:</div>
+        <pre class="poblem-solution__pre">        
+          
+            /**
+            * @param {string} s
+            * @param {number} numRows
+            * @return {string}
+            */
+            var convert = function(s, numRows) {
+                let matrix = {}
+
+                for(let i=0; i < numRows; i++){ matrix[i] = [] }
+
+                let index = 0
+                let indexRef = 1
+                for(let i=0; i < s.length; i++){
+
+                    matrix[index].push(s[i])        
+                    
+                    index += indexRef
+                            
+                    if(index == numRows-1) indexRef = -1
+                    if(index == 0) indexRef = 1    
+                    if(numRows == 1) index = 0
+
+                }
+
+                let text = ""
+                for(let i=0; i < numRows; i++){ text += matrix[i].join("") }
+                return text
+            }
+
+
         </pre>
     </div>
 </div>
