[Add] main desc for solid principles

--- a/views/designPatterns/solid/dip.html
+++ b/views/designPatterns/solid/dip.html
@@ -1,6 +1,8 @@
 <div class="block">
     <def2>Dependency Inversion (DIP)</def2>
 
+    <strong>High-level modules should not depend upon low-leve ones; we should use abstrations.</strong>
+
     <p>Does not have anything to do with dependency injection.</p>
 
     <p>Defince the relation that low level module and high level modules should have.</p>
