--- a/views/designPatterns/solid/isp.html
+++ b/views/designPatterns/solid/isp.html
@@ -1,6 +1,9 @@
 <div class="block">
     <def2>Interface Segregation Principle (ISP)</def2>
 
+    <p>States that you should't be putting too much into an interface; split into separate interfaces.</p>
+    <strong>YANGI - You Ain't Going to Neet It</strong>
+
     <p>Theres a problem regarding this SOLID principle and Javascript bc it doesn't use interfaces.</p>
     <p>Although we can formalize the interaction of interfaces with specific code, to make a class behave like an interface.</p>
 
