--- a/views/designPatterns/solid/lsp.html
+++ b/views/designPatterns/solid/lsp.html
@@ -2,6 +2,7 @@
     <def2>Liskov Substitution Principle (LSP)</def2>
 
     <p>Named after Barbara Liskov.</p>
+    <strong>You should always be able to substitute a base type for a subtype.</strong>
     <p>States that if you have some method witch takes a base type it should also equally be able to take a derived type.</p>
 
     <p>In this example we have the class Rectangle with its getters and setters.</p>
