[Add] Builder and Factory pattern designs

--- a/views/designPatterns/designPatterns.html
+++ b/views/designPatterns/designPatterns.html
@@ -46,11 +46,15 @@
 
 <div class="block">
     <def1>Patterns</def1>
+    <p>Design Patterns are typically split into three categories</p>
+
+    <def2>Gamma Categorization</def2>
+    <p>This categorization is called Gamma Categorization, after Erich Gamma, one of Gang of Four book aouthors</p>
     <ul>
         <li>There are 3 main types of SOLID sesign patterns categories</li>
 
 
-        <li><def2>Creational</def2></li>
+        <li><def2>-Creational</def2></li>
         <li>
             <ul>
                 <li><strong>Builder</strong> - </li>
@@ -65,7 +69,7 @@
             </ul>
         </li>
 
-        <li><def2>Structural</def2></li>
+        <li><def2>-Structural</def2></li>
         <li>
             <ul>
                 <li><strong>Adapter</strong> - </li>
@@ -78,7 +82,7 @@
             </ul>
         </li>
 
-        <li><def2>Behavioral</def2></li>
+        <li><def2>-Behavioral</def2></li>
         <li>
             <ul>
                 <li><strong>Chain of Responsibility</strong> - </li>
@@ -96,6 +100,17 @@
         </li>
     </ul>
 </div>
+
+
+<!-- Creational Patterns -->
+<div w3-include-html="views/designPatterns/creational/creational.html"></div>
+
+<!-- Structural Patterns -->
+<div w3-include-html="views/designPatterns/structural/structural.html"></div>
+
+<!-- Behavioral Patterns -->
+<div w3-include-html="views/designPatterns/behavioral/behavioral.html"></div>
+
 
 <div class="block">
     <def1>AntiPatterns</def1>
