[Add] builder and serializer design patterns

--- a/views/designPatterns/creational/creational.html
+++ b/views/designPatterns/creational/creational.html
@@ -20,3 +20,9 @@
 
 <!-- Abstract Factory -->
 <div w3-include-html="views/designPatterns/creational/abstractFactory.html"></div>
+
+<!-- Prorotype Factory -->
+<div w3-include-html="views/designPatterns/creational/prototype.html"></div>
+
+<!-- Abstract Factory -->
+<div w3-include-html="views/designPatterns/creational/singleton.html"></div>
